2005-01-22  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c, sierra-desc.h: Add code in case we ever need a
	  GP_WIDGET_BUTTON/callback created, not currently used.

2005-01-05  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c: Add other Olympus C750UZ camera settings, they
	  were using the C3040 ones except for the zoom. Also use
	  GP_WIDGET_MENU instead of GP_WIDGET_RADIO for the resolutions,
	  as the radio with many elements takes up to much space.

2005-01-04  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c: Call gp_widget_set_name to properly set the
	  "name", so new gphoto2 --list-config and such are easier to
	  use.

2004-12-11  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c, sierra.h: Per report from Emmanuel Beranger, add and
	  use a SIERRA_MID_SPEED flag so we only use download speeds of
	  9600 to 38400 for the Olympus C820-L.

2004-07-30  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c, sierra.c, sierra.h: Patch from Sean Bruno
	  <sean.bruno@dsl-only.net> to support Toshiba cameras. Added and
	  use SIERRA_NO_USB_CLEAR and SIERRA_NO_REGISTER_40 flags.

2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c: Only do progress updates in sierra_get_string_register
	  if a command requires multiple packets.

2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c, sierra.c: Enable progress checks, since the recursion
	  cases have been removed from libgphoto2 and gtkam.

2003-11-15  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c: Make all ifdef's the same for recursion check and add
	  a missing ifdef.

2003-11-15  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c, sierra-desc.h, sierra.c: Add basic camera
	  description for the oly 750uz (just the zoom support and
	  oly750uz_manual for now).

2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>